fixing overflow issue on ios devices

--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,13 @@ address {
     font-size: 20px;
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow-y: scroll;
+}
+
 * {
     margin: 0;
     line-height: 1.5em;
